tests/architecture/fixtures/fail/src/silicato/ui/bad.py
from __future__ import annotations

from silicato.domain.model import Turn

TURN = Turn()
